--- a/index.html
+++ b/index.html
@@ -10,34 +10,31 @@
 
         body {
             font-family: 'Montserrat', sans-serif;
-            background-color: #101010;
+            background-color: #121212;
             color: white;
             text-align: center;
             margin: 0;
             padding: 0;
             overflow: hidden;
-            position: relative;
         }
 
         header {
             background: #1f1f1f;
             padding: 20px;
-            font-size: 30px;
-            font-weight: bold;
-            letter-spacing: 2px;
+            font-size: 24px;
             text-transform: uppercase;
-            color: #e6e6e6;
         }
 
         .audio-controls {
             position: absolute;
             top: 50%;
-            right: 10%;
-            transform: translateY(-50%);
+            left: 50%;
+            transform: translate(-50%, -50%);
             display: flex;
+            flex-direction: row;
             align-items: center;
             background: #333;
-            padding: 15px 30px;
+            padding: 10px 20px;
             border-radius: 10px;
         }
 
@@ -49,7 +46,7 @@
             font-size: 16px;
             cursor: pointer;
             border-radius: 5px;
-            margin: 5px;
+            margin: 0 5px;
             transition: 0.3s;
         }
 
@@ -58,44 +55,55 @@
         }
 
         input[type="range"] {
-            width: 200px;
-            margin-top: 10px;
+            width: 150px;
+            margin-left: 10px;
         }
 
-        .record {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            height: 300px;
-            background: url('record.png') center center no-repeat;
-            background-size: cover;
-            border-radius: 50%;
-            animation: spin 0.4s linear infinite;
-            opacity: 0;
-        }
-
-        @keyframes spin {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-
-        .visualizer-container {
+        .visualizer {
             position: absolute;
             bottom: 0;
+            height: 10px;
             width: 100%;
             display: flex;
             justify-content: space-between;
-            padding: 10px 0;
-            margin-bottom: 10px;
+            margin: 0;
+            padding: 0;
         }
 
-        .visualizer-bar {
+        .bar {
             width: 4%;
-            height: 10px;
-            background: black;
-            transition: all 0.1s;
+            height: 100%;
+            background: #121212;
+            transition: height 0.1s ease;
+        }
+
+        .image-container {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+            margin-top: -50px;
+        }
+
+        #recordImage {
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            border: 10px solid #ff5722;
+            transition: transform 0.1s ease-out;
+        }
+
+        .sparks {
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100vw;
+            height: 100vh;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.3s ease-out;
         }
 
         .spark {
@@ -103,137 +111,155 @@
             background: white;
             width: 2px;
             height: 2px;
-            border-radius: 50%;
-            opacity: 0;
-            animation: spark-animation 1s infinite;
+            animation: sparkle 0.5s infinite;
+            pointer-events: none;
         }
 
-        @keyframes spark-animation {
-            0% { opacity: 1; transform: translateY(0) scale(1); }
-            50% { opacity: 0.7; transform: translateY(-10px) scale(1.5); }
-            100% { opacity: 0; transform: translateY(0) scale(2); }
+        @keyframes sparkle {
+            0% {
+                transform: translateX(0) translateY(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateX(20px) translateY(20px);
+                opacity: 0;
+            }
+        }
+
+        .retro {
+            background: #121212;
+            color: #ffffff;
         }
     </style>
 </head>
 <body>
 
     <header>
-        JBL Speaker - by 4170
+        <h1>JBL Speaker - by 4170</h1>
     </header>
+
+    <div class="image-container">
+        <img id="recordImage" src="record.png" alt="Record">
+    </div>
 
     <div class="audio-controls">
         <button id="playPauseButton">Play</button>
         <button id="pauseButton">Pause</button>
         <input type="range" id="seekBar" value="0" min="0" step="1">
+        <input type="file" id="fileUpload">
+        <select id="fileList"></select>
     </div>
 
     <audio id="audio" src="sound.mp3"></audio>
 
-    <div class="record" id="record"></div>
-
-    <div class="visualizer-container" id="visualizer-container">
-        <!-- Visualizer Bars will be generated dynamically -->
-    </div>
+    <div class="visualizer" id="visualizer"></div>
+    <div class="sparks" id="sparks"></div>
 
     <script>
         const audio = document.getElementById('audio');
         const playPauseButton = document.getElementById('playPauseButton');
         const pauseButton = document.getElementById('pauseButton');
         const seekBar = document.getElementById('seekBar');
-        const record = document.getElementById('record');
-        const visualizerContainer = document.getElementById('visualizer-container');
-        let sparks = [];
+        const fileUpload = document.getElementById('fileUpload');
+        const fileList = document.getElementById('fileList');
+        const recordImage = document.getElementById('recordImage');
+        const sparks = document.getElementById('sparks');
+        const visualizer = document.getElementById('visualizer');
 
-        // Create 20 visualizer bars
-        for (let i = 0; i < 20; i++) {
-            let bar = document.createElement('div');
-            bar.classList.add('visualizer-bar');
-            visualizerContainer.appendChild(bar);
-        }
+        let audioContext, analyser, dataArray, bufferLength;
 
-        const visualizerBars = document.querySelectorAll('.visualizer-bar');
+        playPauseButton.addEventListener('click', playAudio);
+        pauseButton.addEventListener('click', pauseAudio);
+        seekBar.addEventListener('input', () => { audio.currentTime = seekBar.value; });
+        fileUpload.addEventListener('change', handleFileUpload);
 
-        // Play/Pause button
-        playPauseButton.addEventListener('click', function() {
+        function playAudio() {
             if (audio.paused) {
                 audio.play();
                 playPauseButton.textContent = 'Pause';
-                record.style.animation = 'spin 1s linear infinite';
-                record.style.opacity = 1;
+                recordImage.style.transform = 'rotate(360deg)';
+                sparks.style.opacity = 1;
             } else {
-                audio.pause();
-                playPauseButton.textContent = 'Play';
-                record.style.animation = 'none';
-                record.style.opacity = 0;
+                pauseAudio();
             }
-        });
+        }
 
-        // Pause button
-        pauseButton.addEventListener('click', function() {
+        function pauseAudio() {
             audio.pause();
             playPauseButton.textContent = 'Play';
-            record.style.animation = 'none';
-            record.style.opacity = 0;
-        });
+            recordImage.style.transform = 'rotate(0deg)';
+            sparks.style.opacity = 0;
+        }
 
-        // Update the time bar
         audio.addEventListener('timeupdate', function() {
             seekBar.max = audio.duration;
             seekBar.value = audio.currentTime;
         });
 
-        seekBar.addEventListener('input', function() {
-            audio.currentTime = seekBar.value;
+        function handleFileUpload() {
+            const file = fileUpload.files[0];
+            if (file) {
+                const objectURL = URL.createObjectURL(file);
+                audio.src = objectURL;
+                addToFileList(file.name);
+            }
+        }
+
+        function addToFileList(fileName) {
+            const option = document.createElement('option');
+            option.value = fileName;
+            option.textContent = fileName;
+            fileList.appendChild(option);
+        }
+
+        fileList.addEventListener('change', function() {
+            audio.src = URL.createObjectURL(fileUpload.files[fileList.selectedIndex]);
+            audio.play();
         });
 
-        // Web Audio API for Visualizer
-        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-        const analyser = audioContext.createAnalyser();
+        // Setup audio visualizer
+        audioContext = new (window.AudioContext || window.webkitAudioContext)();
+        analyser = audioContext.createAnalyser();
+        analyser.fftSize = 256;
+        bufferLength = analyser.frequencyBinCount;
+        dataArray = new Uint8Array(bufferLength);
+
         const source = audioContext.createMediaElementSource(audio);
         source.connect(analyser);
         analyser.connect(audioContext.destination);
-        analyser.fftSize = 64;
-
-        const bufferLength = analyser.frequencyBinCount;
-        const dataArray = new Uint8Array(bufferLength);
 
         function animateVisualizer() {
             requestAnimationFrame(animateVisualizer);
             analyser.getByteFrequencyData(dataArray);
-            for (let i = 0; i < 20; i++) {
-                const value = dataArray[i] || 0;
-                const scale = (value / 255) * 100;
-                visualizerBars[i].style.height = `${scale}px`;
-                visualizerBars[i].style.backgroundColor = `rgb(${255 - value}, ${value}, ${value})`;  // Black to white effect
-            }
+            visualizer.innerHTML = '';
+
+            dataArray.forEach((value, index) => {
+                const bar = document.createElement('div');
+                bar.classList.add('bar');
+                bar.style.height = `${(value / 255) * 100}%`;
+                bar.style.backgroundColor = `rgb(${value}, ${255 - value}, ${value})`;
+                visualizer.appendChild(bar);
+            });
         }
 
         audio.onplay = () => {
-            if (audioContext.state === 'suspended') {
-                audioContext.resume();
-            }
+            if (audioContext.state === 'suspended') audioContext.resume();
             animateVisualizer();
-            spawnSparks();
         };
 
-        // Spark animation
-        function spawnSparks() {
-            if (audio.paused) return;
-
-            let spark = document.createElement('div');
-            spark.classList.add('spark');
-            spark.style.left = `${Math.random() * 100}%`;
-            spark.style.top = `${Math.random() * 100}%`;
-            document.body.appendChild(spark);
-            sparks.push(spark);
-
-            setTimeout(() => {
-                spark.remove();
-                sparks = sparks.filter(s => s !== spark);
-            }, 1000);
+        function createSparks() {
+            for (let i = 0; i < 50; i++) {
+                const spark = document.createElement('div');
+                spark.classList.add('spark');
+                spark.style.left = `${Math.random() * 100}vw`;
+                spark.style.top = `${Math.random() * 100}vh`;
+                sparks.appendChild(spark);
+                setTimeout(() => { spark.remove(); }, 500);
+            }
         }
 
-        setInterval(spawnSparks, 100); // Trigger sparks while playing
+        audio.onplay = createSparks;
+
     </script>
 
 </body>
